// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Checkbox Default smoke-test 1`] = `
<div class="cmpui_checkbox__root"
     aria-disabled="false"
>
  <div class="cmpui_checkbox__box">
    <input id="id-1"
           type="checkbox"
           class="cmpui_checkbox__input"
    >
    <div class="cmpui_checkbox__indicator"
         data-checked="false"
    >
      <svg xmlns="http://www.w3.org/2000/svg"
           height="16"
           viewbox="0 -960 960 960"
           width="16"
           fill="currentColor"
      >
        <path d="M382-208 122-468l90-90 170 170 366-366 90 90-456 456Z">
        </path>
      </svg>
    </div>
  </div>
</div>
`;

exports[`components/Checkbox Label smoke-test 1`] = `
<div class="cmpui_checkbox__root"
     aria-disabled="false"
     default="Label"
>
  <div class="cmpui_checkbox__box">
    <input id="id-2"
           type="checkbox"
           class="cmpui_checkbox__input"
           default="Label"
    >
    <div class="cmpui_checkbox__indicator"
         data-checked="false"
    >
      <svg xmlns="http://www.w3.org/2000/svg"
           height="16"
           viewbox="0 -960 960 960"
           width="16"
           fill="currentColor"
      >
        <path d="M382-208 122-468l90-90 170 170 366-366 90 90-456 456Z">
        </path>
      </svg>
    </div>
  </div>
  <label class="cmpui_checkbox__label"
         for="id-2"
  >
    Label
  </label>
</div>
`;
